<!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<resources>
    <string name="app_name">To Do App Project</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_add">Add Activity</string>
    <string name="title_activity_edit_or_remove">Edit or Remove Activity</string>
    <string name="title_dialog_filter">Filter Ascending Option</string>
    <string name="menu_setting_option">Setting</string>
    <string name="menu_filter_option">Filter</string>
    <string name="text_empty_list">No Data</string>
    <string name="text_name">Name</string>
    <string name="text_details">Details</string>
    <string name="text_priority">Priority</string>
    <string name="text_status">Status</string>
    <string name="text_percent">Percent</string>
    <string name="text_percent_0">0%</string>
    <string name="text_completed">Completed</string>
    <string name="text_started_date">Started date</string>
    <string name="text_due_date">Due date</string>
    <string name="text_separate"> - </string>
    <string name="text_percent_char">%</string>
    <string name="text_date_picker">Date Picker Dialog</string>
    <string name="edt_name_error_empty">Name is required</string>
    <string name="error_add">Add Error</string>
    <string name="error_add_duplicated">Add Error Duplicated Name</string>
    <string name="error_date">Started Day Cannot Older Than Due Day</string>
    <string name="error_edit">Edit Error</string>
    <string name="error_remove">Remove Error</string>
    <string name="error_load_details">Load Details Error</string>
    <string name="successfully_add">Add Successfully</string>
    <string name="successfully_edit">Edit Successfully</string>
    <string name="successfully_remove">Remove Successfully</string>
    <string name="remove_title_confirm">REMOVE</string>
    <string name="remove_message_confirm">Do you want to remove?</string>
    <string name="btn_add">Add</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_accept">Accept</string>
    <string-array name="spinner_priority">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
    <string-array name="spinner_status">
        <item>Not Start</item>
        <item>In Progress</item>
        <item>Done</item>
    </string-array>
</resources>
