<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/listItemTxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name" />

    <TextView
        android:id="@+id/listItemTxtPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_priority" />

    <TextView
        android:id="@+id/listItemTxtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_status" />

    <TextView
        android:id="@+id/listItemTxtPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_percent" />

    <TextView
        android:id="@+id/listItemTxtDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_due_date" />
</LinearLayout>