<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_or_remove"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.EditOrRemoveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name" />

        <EditText
            android:id="@+id/editTaskTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/text_name" />

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_details" />

        <EditText
            android:id="@+id/editTaskTxtDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_details"
            android:maxLength="150" />

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_priority" />

        <Spinner
            android:id="@+id/editTaskSpinnerPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_status" />

        <Spinner
            android:id="@+id/editTaskSpinnerStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_percent" />

        <TextView
            android:id="@+id/editTaskTxtPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_percent_0" />

        <SeekBar
            android:id="@+id/editTaskSeekBarPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_completed" />

        <CheckBox
            android:id="@+id/editTaskCheckBoxCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_completed" />

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_started_date" />

        <EditText
            android:id="@+id/editTaskStartedSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_date_picker" />

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_due_date" />

        <EditText
            android:id="@+id/editTaskDueSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_date_picker" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_remove"
            android:textAllCaps="true" />
    </LinearLayout>
</ScrollView>
